ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: 404lbproject.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-serv
            port:
              number: 80
